--- a/inwezt_frontend/package.json
+++ b/inwezt_frontend/package.json
@@ -22,6 +22,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.0",
     "typescript": "^5.9.3",
     "vite": "^7.3.1"
